<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkColor"
    tools:context="com.example.android.scorekeeperapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryDarkColor">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_below="@id/title"
            android:layout_marginBottom="@dimen/margin"
            android:background="@color/secondaryColor" />

        <LinearLayout
            android:id="@+id/scoreboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_margin="15dp">

            <LinearLayout
                android:id="@+id/player_one_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/player_one_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/player_icon"
                    android:fontFamily="@font/anton_regular"
                    android:gravity="center"
                    android:padding="@dimen/margin"
                    android:text="@string/player1"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/player_one_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/anton_regular"
                    android:gravity="center"
                    android:text="@string/score"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/score_text_size"
                    android:textStyle="bold" />


            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/secondaryColor" />

            <LinearLayout
                android:id="@+id/player_two_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/player_two_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/anton_regular"
                    android:gravity="center"
                    android:padding="@dimen/margin"
                    android:text="@string/player2"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/player_two_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/anton_regular"
                    android:gravity="center"
                    android:text="@string/score"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/score_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/remaining_tiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/scoreboard"
            android:layout_margin="@dimen/margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tile_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tiles_left"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/tile_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/tiles_left_heading"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/score_entry_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/remaining_tiles"
            android:orientation="vertical">


            <EditText
                android:id="@+id/score_entry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/enter_score"
                android:inputType="number"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/primaryTextColor"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/tiles_left_entry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/tile_text_entry"
                android:inputType="number"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/primaryTextColor"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/score_entry_layout"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/button_margin"
            android:background="@color/secondaryDarkColor"
            android:onClick="updateScore"
            android:padding="@dimen/padding"
            android:text="@string/submit"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/pass_player_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/score_entry_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginTop="@dimen/button_margin"
            android:background="@color/secondaryDarkColor"
            android:onClick="skipTurn"
            android:padding="@dimen/padding"
            android:text="@string/pass"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/score_entry_layout"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginTop="@dimen/button_margin"
            android:background="@color/secondaryDarkColor"
            android:onClick="reset"
            android:padding="@dimen/padding"
            android:text="@string/reset"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size" />


    </RelativeLayout>


</ScrollView>